etcdserver/api/v3lock/v3lockpb: update v3lock.pb
