# etcdserver/api/v3lock/v3lockpb/v3lock.pb.go
@@ -159,6 +159,10 @@ type LockClient interface {
 	// lock ownership. The lock is held until Unlock is called on the key or the
 	// lease associate with the owner expires.
 	Lock(ctx context.Context, in *LockRequest, opts ...grpc.CallOption) (*LockResponse, error)
+	// TryLock is different from Lock, TryLock locks the mutex will not be blocked
+	// any time. If the mutex is occupied while trying to acquire the lock,
+	// this function will return an error immediately.
+	TryLock(ctx context.Context, in *LockRequest, opts ...grpc.CallOption) (*LockResponse, error)
 	// Unlock takes a key returned by Lock and releases the hold on lock. The
 	// next Lock caller waiting for the lock will then be woken up and given
 	// ownership of the lock.
@@ -176,6 +180,15 @@ func NewLockClient(cc *grpc.ClientConn) LockClient {
 func (c *lockClient) Lock(ctx context.Context, in *LockRequest, opts ...grpc.CallOption) (*LockResponse, error) {
 	out := new(LockResponse)
 	err := grpc.Invoke(ctx, "/v3lockpb.Lock/Lock", in, out, c.cc, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *lockClient) TryLock(ctx context.Context, in *LockRequest, opts ...grpc.CallOption) (*LockResponse, error) {
+	out := new(LockResponse)
+	err := grpc.Invoke(ctx, "/v3lockpb.Lock/TryLock", in, out, c.cc, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -201,6 +214,10 @@ type LockServer interface {
 	// lock ownership. The lock is held until Unlock is called on the key or the
 	// lease associate with the owner expires.
 	Lock(context.Context, *LockRequest) (*LockResponse, error)
+	// TryLock is different from Lock, TryLock locks the mutex will not be blocked
+	// any time. If the mutex is occupied while trying to acquire the lock,
+	// this function will return an error immediately.
+	TryLock(context.Context, *LockRequest) (*LockResponse, error)
 	// Unlock takes a key returned by Lock and releases the hold on lock. The
 	// next Lock caller waiting for the lock will then be woken up and given
 	// ownership of the lock.
@@ -225,6 +242,24 @@ func _Lock_Lock_Handler(srv interface{}, ctx context.Context, dec func(interface
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(LockServer).Lock(ctx, req.(*LockRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Lock_TryLock_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(LockRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(LockServer).TryLock(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/v3lockpb.Lock/TryLock",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(LockServer).TryLock(ctx, req.(*LockRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -254,6 +289,10 @@ var _Lock_serviceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "Lock",
 			Handler:    _Lock_Lock_Handler,
+		},
+		{
+			MethodName: "TryLock",
+			Handler:    _Lock_TryLock_Handler,
 		},
 		{
 			MethodName: "Unlock",
@@ -934,26 +973,27 @@ var (
 func init() { proto.RegisterFile("v3lock.proto", fileDescriptorV3Lock) }
 
 var fileDescriptorV3Lock = []byte{
-	// 331 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xe2, 0xe2, 0x29, 0x33, 0xce, 0xc9,
-	0x4f, 0xce, 0xd6, 0x2b, 0x28, 0xca, 0x2f, 0xc9, 0x17, 0xe2, 0x80, 0xf0, 0x0a, 0x92, 0xa4, 0x44,
-	0xd2, 0xf3, 0xd3, 0xf3, 0xc1, 0x82, 0xfa, 0x20, 0x16, 0x44, 0x5e, 0x4a, 0x2d, 0xb5, 0x24, 0x39,
-	0x45, 0x1f, 0x44, 0x14, 0xa7, 0x16, 0x95, 0xa5, 0x16, 0x21, 0x31, 0x0b, 0x92, 0xf4, 0x8b, 0x0a,
-	0x92, 0xa1, 0xea, 0x64, 0xd2, 0xf3, 0xf3, 0xd3, 0x73, 0x52, 0xf5, 0x13, 0x0b, 0x32, 0xf5, 0x13,
-	0xf3, 0xf2, 0xf2, 0x4b, 0x12, 0x4b, 0x32, 0xf3, 0xf3, 0x8a, 0x21, 0xb2, 0x4a, 0xe6, 0x5c, 0xdc,
-	0x3e, 0xf9, 0xc9, 0xd9, 0x41, 0xa9, 0x85, 0xa5, 0xa9, 0xc5, 0x25, 0x42, 0x42, 0x5c, 0x2c, 0x79,
-	0x89, 0xb9, 0xa9, 0x12, 0x8c, 0x0a, 0x8c, 0x1a, 0x3c, 0x41, 0x60, 0xb6, 0x90, 0x08, 0x17, 0x6b,
-	0x4e, 0x6a, 0x62, 0x71, 0xaa, 0x04, 0x93, 0x02, 0xa3, 0x06, 0x73, 0x10, 0x84, 0xa3, 0x14, 0xc6,
-	0xc5, 0x03, 0xd1, 0x58, 0x5c, 0x90, 0x9f, 0x57, 0x9c, 0x2a, 0x64, 0xc2, 0xc5, 0x96, 0x91, 0x9a,
-	0x98, 0x92, 0x5a, 0x04, 0xd6, 0xcb, 0x6d, 0x24, 0xa3, 0x87, 0xec, 0x1e, 0x3d, 0x98, 0x3a, 0x0f,
-	0xb0, 0x9a, 0x20, 0xa8, 0x5a, 0x21, 0x01, 0x2e, 0xe6, 0xec, 0xd4, 0x4a, 0xb0, 0xc9, 0x3c, 0x41,
-	0x20, 0xa6, 0x92, 0x22, 0x17, 0x6f, 0x68, 0x5e, 0x0e, 0x92, 0x93, 0xa0, 0x4a, 0x18, 0x11, 0x4a,
-	0xdc, 0xb8, 0xf8, 0x60, 0x4a, 0x28, 0xb1, 0xdc, 0x68, 0x03, 0x23, 0x17, 0x0b, 0xc8, 0x0f, 0x42,
-	0xfe, 0x50, 0x5a, 0x54, 0x0f, 0x16, 0xe6, 0x7a, 0x48, 0x81, 0x22, 0x25, 0x86, 0x2e, 0x0c, 0x31,
-	0x4d, 0x49, 0xa2, 0xe9, 0xf2, 0x93, 0xc9, 0x4c, 0x42, 0x4a, 0xbc, 0xfa, 0x65, 0xc6, 0xfa, 0x20,
-	0x05, 0x60, 0xc2, 0x8a, 0x51, 0x4b, 0x28, 0x9c, 0x8b, 0x0d, 0xe2, 0x42, 0x21, 0x71, 0x84, 0x5e,
-	0x14, 0x6f, 0x49, 0x49, 0x60, 0x4a, 0x40, 0x8d, 0x95, 0x02, 0x1b, 0x2b, 0xa2, 0xc4, 0x0f, 0x37,
-	0xb6, 0x34, 0x0f, 0x6a, 0xb0, 0x93, 0xc0, 0x89, 0x47, 0x72, 0x8c, 0x17, 0x1e, 0xc9, 0x31, 0x3e,
-	0x78, 0x24, 0xc7, 0x38, 0xe3, 0xb1, 0x1c, 0x43, 0x12, 0x1b, 0x38, 0x1e, 0x8d, 0x01, 0x01, 0x00,
-	0x00, 0xff, 0xff, 0x65, 0xa8, 0x61, 0xb1, 0x3d, 0x02, 0x00, 0x00,
+	// 352 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xa4, 0x92, 0x41, 0x4b, 0xc3, 0x30,
+	0x14, 0x80, 0xcd, 0x36, 0xa7, 0x64, 0x9d, 0x8e, 0xb0, 0x69, 0xa9, 0xa3, 0xcc, 0x1c, 0x64, 0x78,
+	0x68, 0x60, 0x13, 0x04, 0x8f, 0x1e, 0xc4, 0x83, 0x20, 0x14, 0xa7, 0xe7, 0xae, 0x7b, 0xd4, 0xb1,
+	0x9a, 0xd4, 0xb4, 0x1b, 0xec, 0xea, 0xc5, 0x1f, 0xe0, 0xc5, 0x9f, 0xe4, 0x51, 0xf0, 0x0f, 0xc8,
+	0xf4, 0x87, 0x48, 0x93, 0x76, 0xab, 0x7a, 0xd3, 0x4b, 0xfa, 0x92, 0xf7, 0xbd, 0xaf, 0x79, 0x8f,
+	0x60, 0x63, 0xd6, 0x0f, 0x85, 0x3f, 0x71, 0x22, 0x29, 0x12, 0x41, 0x36, 0xf5, 0x2e, 0x1a, 0x5a,
+	0xcd, 0x40, 0x04, 0x42, 0x1d, 0xb2, 0x34, 0xd2, 0x79, 0xeb, 0x00, 0x12, 0x7f, 0xc4, 0xd2, 0x25,
+	0x06, 0x39, 0x03, 0x59, 0x08, 0xa3, 0x21, 0x93, 0x91, 0x9f, 0x71, 0xed, 0x40, 0x88, 0x20, 0x04,
+	0xe6, 0x45, 0x63, 0xe6, 0x71, 0x2e, 0x12, 0x2f, 0x19, 0x0b, 0x1e, 0xeb, 0x2c, 0x3d, 0xc6, 0xb5,
+	0x0b, 0xe1, 0x4f, 0x5c, 0xb8, 0x9f, 0x42, 0x9c, 0x10, 0x82, 0x2b, 0xdc, 0xbb, 0x03, 0x13, 0x75,
+	0x50, 0xd7, 0x70, 0x55, 0x4c, 0x9a, 0x78, 0x3d, 0x04, 0x2f, 0x06, 0xb3, 0xd4, 0x41, 0xdd, 0xb2,
+	0xab, 0x37, 0xf4, 0x1a, 0x1b, 0xba, 0x30, 0x8e, 0x04, 0x8f, 0x81, 0x1c, 0xe1, 0xea, 0x2d, 0x78,
+	0x23, 0x90, 0xaa, 0xb6, 0xd6, 0x6b, 0x3b, 0xc5, 0xfb, 0x38, 0x39, 0x77, 0xae, 0x18, 0x37, 0x63,
+	0x49, 0x03, 0x97, 0x27, 0x30, 0x57, 0x66, 0xc3, 0x4d, 0x43, 0xba, 0x8f, 0xeb, 0x03, 0x1e, 0x16,
+	0xae, 0x94, 0x21, 0x68, 0x85, 0x9c, 0xe1, 0xad, 0x1c, 0xf9, 0xcf, 0xcf, 0x7b, 0x8f, 0x25, 0x5c,
+	0x49, 0x7b, 0x20, 0x97, 0xd9, 0xb7, 0xe5, 0xe4, 0x33, 0x77, 0x0a, 0x43, 0xb1, 0x76, 0x7e, 0x1e,
+	0x6b, 0x1b, 0x35, 0x1f, 0xde, 0x3e, 0x9f, 0x4a, 0x84, 0xd6, 0xd9, 0xac, 0xcf, 0x52, 0x40, 0x2d,
+	0x27, 0xe8, 0x90, 0x0c, 0xf0, 0xc6, 0x95, 0x9c, 0xff, 0xc5, 0xb9, 0xa7, 0x9c, 0x2d, 0xda, 0x58,
+	0x3a, 0x13, 0x39, 0xcf, 0xb5, 0x37, 0xb8, 0xaa, 0x1b, 0x27, 0xbb, 0xab, 0xf2, 0x6f, 0xd3, 0xb2,
+	0xcc, 0xdf, 0x89, 0xcc, 0x6c, 0x29, 0x73, 0x93, 0x6e, 0x2f, 0xcd, 0x53, 0x9e, 0x89, 0x4f, 0x1b,
+	0x2f, 0x0b, 0x1b, 0xbd, 0x2e, 0x6c, 0xf4, 0xbe, 0xb0, 0xd1, 0xf3, 0x87, 0xbd, 0x36, 0xac, 0xaa,
+	0xe7, 0xd1, 0xff, 0x0a, 0x00, 0x00, 0xff, 0xff, 0x0d, 0x11, 0x26, 0x35, 0x94, 0x02, 0x00, 0x00,
 }
